--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(COMPONENT_SRCS "hello_world_main.c")
-set(COMPONENT_ADD_INCLUDEDIRS "")
+# The following lines of boilerplate have to be in your project's
+# CMakeLists in this exact order for cmake to work correctly
+cmake_minimum_required(VERSION 3.5)
 
-register_component()
+include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+project(rfm95)
